fix: reservationController
